gccida/c2/free_after_compilation
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:935:12: error: expected expression
*( _OWORD *)&f->return_rtx = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:935:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->return_rtx = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:936:12: error: expected expression
*( _OWORD *)&f->x_nonlocal_labels = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:936:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_nonlocal_labels = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:937:12: error: expected expression
*( _OWORD *)&f->x_nonlocal_goto_handler_labels = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:937:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_nonlocal_goto_handler_labels = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:938:12: error: expected expression
*( _OWORD *)&f->x_cleanup_label = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:938:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_cleanup_label = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:939:12: error: expected expression
*( _OWORD *)&f->x_save_expr_regs = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:939:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_save_expr_regs = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:940:12: error: expected expression
*( _OWORD *)&f->x_rtl_expr_chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:940:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_rtl_expr_chain = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:941:12: error: expected expression
*( _OWORD *)&f->x_tail_recursion_reentry = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:941:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_tail_recursion_reentry = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:943:12: error: expected expression
*( _OWORD *)&f->x_context_display = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:943:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_context_display = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:944:12: error: expected expression
*( _OWORD *)&f->x_parm_birth_insn = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:944:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&f->x_parm_birth_insn = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/function.c:945:12: error: expected expression
*( _OWORD *)&f->x_parm_reg_stack_loc = 0LL; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/free_after_compilation/src/obj/function.o] Error 1
